--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GreenQuest"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:localeConfig="@xml/locale_config">
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait"
